--- a/C++ Tasks/.vscode/launch.json
+++ b/C++ Tasks/.vscode/launch.json
@@ -8,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": ".",
-      "program": "build/Debug/outDebug",
+      "cwd": "c:/Users/hassa/Desktop/CodSoft/C++ Tasks/Task #1",
+      "program": "c:/Users/hassa/Desktop/CodSoft/C++ Tasks/Task #1/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
